// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Design System/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Design System/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Design System/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Design System/Range Large 1`] = `
<input
  className="storybook-range storybook-range--large storybook-range--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="range"
  value="Range"
/>
`;

exports[`Storyshots Design System/Range Primary 1`] = `
<input
  className="storybook-range storybook-range--medium storybook-range--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="range"
  value="Range"
/>
`;

exports[`Storyshots Design System/Range Secondary 1`] = `
<input
  className="storybook-range storybook-range--medium storybook-range--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="range"
  value="Range"
/>
`;

exports[`Storyshots Design System/Range Small 1`] = `
<input
  className="storybook-range storybook-range--small storybook-range--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="range"
  value="Range"
/>
`;
